      and continues (instead of using the GDB `until' command).  If
      the temporary breakpoint is not reached, it is deleted.
    - Using GDB, you can now alter the current execution position
      interactively.  This allows you to back up - perhaps with more
      breakpoints set-over a portion of a program that has already
      executed, in order to examine its execution in more detail.
    - Improved display of breakpoints and execution positions:
      + The current execution position is now properly cleared if
        undetermined (no source, program terminated, etc.)
      + If the program stopped due to a signal, this is indicated
        by a lightning symbol within the current execution glyph.
      + Faster scrolling.  While scrolling source or machine code at
        high speed, glyphs are now unmapped.  Slow scrolling still
        shows glyphs.
    - Resource files have been renamed.  All files are now located
      under `~/.ddd'.  The file `~/.dddinit' has been replaced by
      `~/.ddd/init'; `~/.ddd_history' is now `~/.ddd/history'.  The
       directory `~/.ddd/sessions/' contains saved DDD sessions.
    - Your window manager running DDD should now show multi-color
      DDD icons.  (requires XPM)
    - During start-up, DDD shows a multi-color logo in a transient
      window (can be disabled).

    Bug fixes:
    - Various fixes for XDB on HP-UX 10.x included.  Thanks to Robert
      Wiegand <wiegand@kong.gsfc.nasa.gov>.
    - DDD no longer hangs while receiving large chunks of data.
    - Several speed-ups in processing debugger and program output.
    - A serious bug that caused timers to be inadvertently removed has
      been fixed.  Bug effects included loss of console cursor, loss
      of data display contents, and loss of scrolling capabilities.
    - Again, several dozens of minor improvements and bug fixes.


DDD 2.1.1
---------

    DDD 2.1.1 includes some hacks that make DDD run with LessTif, a